--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ fastdivide = "0.4.0"
 itertools = "0.12.0"
 measure_time = "0.8.2"
 arc-swap = "1.5.0"
+tracing = "0.1.41"
 
 columnar = { version= "0.3", path="./columnar", package ="tantivy-columnar" }
 sstable = { version= "0.3", path="./sstable", package ="tantivy-sstable", optional = true }
